# yoto-today-in-history

./: .gitignore  AGENTS.md  Dockerfile  Makefile  package.json  pyproject.toml  requirements.txt  tsconfig.json
scripts/: cleanup_audio.py
src/app/: build.py  config.py  db.py  main.py  models.py  schemas.py  security.py
src/app/clients/: __init__.py  elevenlabs.py  llm.py  openai_client.py  tts.py  wikimedia.py  yoto.py  yoto_auth.py
src/app/prompts/: attribution_json_schema.json  attribution_prompt.txt  selection_json_schema.json  selection_prompt.txt  summarization_json_schema.json  summarization_prompt.txt
src/app/utils/: audio_store.py  pkce.py  tokens.py  urls.py
templates/: auth_test.html  base.html  debug.html  index.html  rebuilding.html  settings.html  tts_test.html
tests/: test_build_offline.py  test_wikimedia_normalize.py
ts/: pkce.ts
