[project]
name = "yoto-today-in-history"
version = "0.1.0"
description = "Yoto Today in History backend (FastAPI)"
readme = "TODAY_IN_HISTORY_SPEC.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "httpx==0.27.0",
  "pydantic==2.8.2",
  "SQLAlchemy==2.0.31",
  "alembic==1.13.2",
  "python-dotenv==1.0.1",
  "tenacity==8.4.1",
  "apscheduler==3.10.4",
  "cryptography==43.0.1",
  "orjson==3.10.6",
  "aiosqlite==0.20.0",
  "jinja2==3.1.4",
  "python-multipart==0.0.9",
  "openai>=1.107.0,<2",
  "jsonschema==4.23.0",
  "greenlet>=3.0.0",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.8",
  "black==24.8.0",
  "ruff==0.5.6",
]
